--- a/app/src/main/res/layout/dialog_khoanchi.xml
+++ b/app/src/main/res/layout/dialog_khoanchi.xml
@@ -12,6 +12,68 @@
         android:orientation="vertical"
         android:padding="10dp">
 
+        <LinearLayout
+            android:id="@+id/lnHidden"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="3dp"
+            android:visibility="gone"
+            android:weightSum="12">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+                    android:gravity="center_vertical"
+                    android:text="Ngày:"
+                    android:textSize="@dimen/muoi" />
+
+                <TextView
+                    android:id="@+id/tvchingay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@android:drawable/ic_menu_recent_history"
+                    android:gravity="center_vertical"
+                    android:text="Giờ:"
+                    android:textSize="@dimen/muoi" />
+
+                <TextView
+                    android:id="@+id/tvchica"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
